Robert/317 cancellation auto enroll 2 (#182)
* Revert "Revert "Robert/317 cancellation auto enroll (#156)" (#171)"

This reverts commit c17c9f218c4d8fd0877cbb1400fc35ada865409d.

* [317]: Fix null exception in waiting list booking method

* [317]: Add additional test cases, reorganise existing tests

* [317]: Refactor requestBooking method in EventBookingManager