@@ -19,6 +19,14 @@ package uk.ac.cam.cl.dtg.isaac.api;
 import static uk.ac.cam.cl.dtg.isaac.api.Constants.DATE_FIELDNAME;
 import static uk.ac.cam.cl.dtg.isaac.api.Constants.ENDDATE_FIELDNAME;
 import static uk.ac.cam.cl.dtg.isaac.api.Constants.EVENT_TYPE;
+import static uk.ac.cam.cl.dtg.isaac.api.Constants.EXCEPTION_MESSAGE_CANNOT_BOOK_CANCELLED_EVENT;
+import static uk.ac.cam.cl.dtg.isaac.api.Constants.EXCEPTION_MESSAGE_CANNOT_LOCATE_USER;
+import static uk.ac.cam.cl.dtg.isaac.api.Constants.EXCEPTION_MESSAGE_CONTENT_ERROR_RETRIEVING_BOOKING;
+import static uk.ac.cam.cl.dtg.isaac.api.Constants.EXCEPTION_MESSAGE_DATABASE_ERROR_CREATING_BOOKING;
+import static uk.ac.cam.cl.dtg.isaac.api.Constants.EXCEPTION_MESSAGE_DATABASE_ERROR_DELETING_BOOKING;
+import static uk.ac.cam.cl.dtg.isaac.api.Constants.EXCEPTION_MESSAGE_DATABASE_ERROR_RETRIEVING_BOOKING;
+import static uk.ac.cam.cl.dtg.isaac.api.Constants.EXCEPTION_MESSAGE_ERROR_LOCATING_CONTENT;
+import static uk.ac.cam.cl.dtg.isaac.api.Constants.EXCEPTION_MESSAGE_EVENT_REQUEST_ERROR;
 import static uk.ac.cam.cl.dtg.isaac.api.Constants.PRIVATE_EVENT_FIELDNAME;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.ADMIN_BOOKING_REASON_FIELDNAME;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.ATTENDED_FIELDNAME;
@@ -29,11 +37,13 @@ import static uk.ac.cam.cl.dtg.segue.api.Constants.EVENT_DATE_FIELDNAME;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.EVENT_ID_FKEY_FIELDNAME;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.EVENT_TAGS_FIELDNAME;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.EventFilterOption;
+import static uk.ac.cam.cl.dtg.segue.api.Constants.ID_FIELDNAME;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.NEVER_CACHE_WITHOUT_ETAG_CHECK;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.STAGE_FIELDNAME;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.SegueServerLogType;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.SortOrder;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.TAGS_FIELDNAME;
+import static uk.ac.cam.cl.dtg.segue.api.Constants.TITLE_FIELDNAME;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.TYPE_FIELDNAME;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.USER_ID_FKEY_FIELDNAME;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.USER_ID_LIST_FKEY_FIELDNAME;
@@ -230,14 +240,14 @@ public class EventsFacade extends AbstractIsaacFacade {
     }
 
     final Map<String, Constants.SortOrder> sortInstructions = Maps.newHashMap();
-    if (sortOrder != null && sortOrder.equals("title")) {
-      sortInstructions.put(Constants.TITLE_FIELDNAME + "." + Constants.UNPROCESSED_SEARCH_FIELD_SUFFIX,
+    if (sortOrder != null && sortOrder.equals(TITLE_FIELDNAME)) {
+      sortInstructions.put(TITLE_FIELDNAME + "." + Constants.UNPROCESSED_SEARCH_FIELD_SUFFIX,
           SortOrder.ASC);
     } else {
       sortInstructions.put(DATE_FIELDNAME, SortOrder.DESC);
     }
 
-    fieldsToMatch.put(TYPE_FIELDNAME, Arrays.asList(EVENT_TYPE));
+    fieldsToMatch.put(TYPE_FIELDNAME, List.of(EVENT_TYPE));
 
     Map<String, AbstractFilterInstruction> filterInstructions = null;
     if (null != showActiveOnly && showActiveOnly) {
@@ -304,8 +314,8 @@ public class EventsFacade extends AbstractIsaacFacade {
 
       return Response.ok(findByFieldNames).build();
     } catch (ContentManagerException e) {
-      log.error("Error during event request", e);
-      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, "Error locating the content you requested.")
+      log.error(EXCEPTION_MESSAGE_EVENT_REQUEST_ERROR, e);
+      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, EXCEPTION_MESSAGE_ERROR_LOCATING_CONTENT)
           .toResponse();
     } catch (SegueDatabaseException e) {
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, "Error accessing your bookings.")
@@ -340,7 +350,7 @@ public class EventsFacade extends AbstractIsaacFacade {
       if (tags != null) {
         Set<String> tagsList = Sets.newHashSet(tags);
         tagsList.retainAll(eventDTOById.getTags()); // get intersection
-        if (tagsList.size() == 0) {
+        if (tagsList.isEmpty()) {
           // if the intersection is empty then we can continue
           continue;
         }
@@ -399,11 +409,11 @@ public class EventsFacade extends AbstractIsaacFacade {
     } catch (ResourceNotFoundException e) {
       return new SegueErrorResponse(Status.NOT_FOUND, "The event specified does not exist.").toResponse();
     } catch (ContentManagerException e) {
-      log.error("Error during event request", e);
-      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, "Error locating the content you requested.")
+      log.error(EXCEPTION_MESSAGE_EVENT_REQUEST_ERROR, e);
+      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, EXCEPTION_MESSAGE_ERROR_LOCATING_CONTENT)
           .toResponse();
     } catch (SegueDatabaseException e) {
-      log.error("Error during event request", e);
+      log.error(EXCEPTION_MESSAGE_EVENT_REQUEST_ERROR, e);
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, "Error resolving event bookings.")
           .toResponse();
     }
@@ -431,7 +441,7 @@ public class EventsFacade extends AbstractIsaacFacade {
     } catch (NoUserLoggedInException e) {
       return SegueErrorResponse.getNotLoggedInResponse();
     } catch (SegueDatabaseException e) {
-      String errorMsg = "Database error occurred while trying to retrieve all event booking information.";
+      String errorMsg = EXCEPTION_MESSAGE_DATABASE_ERROR_RETRIEVING_BOOKING;
       log.error(errorMsg, e);
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, errorMsg).toResponse();
     }
@@ -465,7 +475,7 @@ public class EventsFacade extends AbstractIsaacFacade {
     } catch (ResourceNotFoundException e) {
       return new SegueErrorResponse(Status.NOT_FOUND, "The booking you requested does not exist.").toResponse();
     } catch (SegueDatabaseException e) {
-      String errorMsg = "Database error occurred while trying to retrieve all event booking information.";
+      String errorMsg = EXCEPTION_MESSAGE_DATABASE_ERROR_RETRIEVING_BOOKING;
       log.error(errorMsg, e);
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, errorMsg).toResponse();
     }
@@ -511,7 +521,7 @@ public class EventsFacade extends AbstractIsaacFacade {
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, errorMsg).toResponse();
     } catch (ContentManagerException e) {
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR,
-          "Content Database error occurred while trying to retrieve event booking information.")
+          EXCEPTION_MESSAGE_CONTENT_ERROR_RETRIEVING_BOOKING)
           .toResponse();
     } catch (EventIsFullException e) {
       return new SegueErrorResponse(Status.CONFLICT,
@@ -526,7 +536,7 @@ public class EventsFacade extends AbstractIsaacFacade {
           "The user doesn't exist, so unable to book them onto an event", e)
           .toResponse();
     } catch (EventIsCancelledException e) {
-      return SegueErrorResponse.getBadRequestResponse("The event is cancelled, so no bookings are being accepted.");
+      return SegueErrorResponse.getBadRequestResponse(EXCEPTION_MESSAGE_CANNOT_BOOK_CANCELLED_EVENT);
     }
   }
 
@@ -554,7 +564,7 @@ public class EventsFacade extends AbstractIsaacFacade {
 
       List<DetailedEventBookingDTO> eventBookings = bookingManager.adminGetBookingsByEventId(eventId);
 
-      if (Arrays.asList(Role.EVENT_LEADER).contains(currentUser.getRole())) {
+      if (Role.EVENT_LEADER.equals(currentUser.getRole())) {
         eventBookings = userAssociationManager.filterUnassociatedRecords(currentUser, eventBookings,
             booking -> booking.getUserBooked().getId());
       }
@@ -564,7 +574,7 @@ public class EventsFacade extends AbstractIsaacFacade {
     } catch (NoUserLoggedInException e) {
       return SegueErrorResponse.getNotLoggedInResponse();
     } catch (SegueDatabaseException | ContentManagerException e) {
-      String message = "Database error occurred while trying to retrieve all event booking information.";
+      String message = EXCEPTION_MESSAGE_DATABASE_ERROR_RETRIEVING_BOOKING;
       log.error(message, e);
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, message).toResponse();
     }
@@ -787,12 +797,12 @@ public class EventsFacade extends AbstractIsaacFacade {
     } catch (NoUserLoggedInException e) {
       return SegueErrorResponse.getNotLoggedInResponse();
     } catch (SegueDatabaseException e) {
-      String message = "Database error occurred while trying to retrieve all event booking information.";
+      String message = EXCEPTION_MESSAGE_DATABASE_ERROR_RETRIEVING_BOOKING;
       log.error(message, e);
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, message).toResponse();
     } catch (ContentManagerException e) {
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR,
-          "Content Database error occurred while trying to retrieve event booking information.")
+          EXCEPTION_MESSAGE_CONTENT_ERROR_RETRIEVING_BOOKING)
           .toResponse();
     } catch (UnableToIndexSchoolsException e) {
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, "Database error while looking up schools", e)
@@ -850,21 +860,21 @@ public class EventsFacade extends AbstractIsaacFacade {
     } catch (NoUserLoggedInException e) {
       return SegueErrorResponse.getNotLoggedInResponse();
     } catch (SegueDatabaseException e) {
-      String errorMsg = "Database error occurred while trying to book a user onto an event.";
+      String errorMsg = EXCEPTION_MESSAGE_DATABASE_ERROR_CREATING_BOOKING;
       log.error(errorMsg, e);
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, errorMsg).toResponse();
     } catch (NoUserException e) {
       return new SegueErrorResponse(Status.NOT_FOUND, "Unable to locate the user requested").toResponse();
     } catch (ContentManagerException e) {
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR,
-          "Content Database error occurred while trying to retrieve all event booking information.")
+          EXCEPTION_MESSAGE_CONTENT_ERROR_RETRIEVING_BOOKING)
           .toResponse();
     } catch (DuplicateBookingException e) {
       return new SegueErrorResponse(Status.BAD_REQUEST,
           "User already booked on this event. Unable to create a duplicate booking.")
           .toResponse();
     } catch (EventIsCancelledException e) {
-      return SegueErrorResponse.getBadRequestResponse("The event is cancelled, so no bookings are being accepted.");
+      return SegueErrorResponse.getBadRequestResponse(EXCEPTION_MESSAGE_CANNOT_BOOK_CANCELLED_EVENT);
     }
   }
 
@@ -956,7 +966,7 @@ public class EventsFacade extends AbstractIsaacFacade {
     } catch (NoUserException e) {
       return SegueErrorResponse.getResourceNotFoundResponse("Unable to locate one of the users specified.");
     } catch (EventIsCancelledException e) {
-      return SegueErrorResponse.getBadRequestResponse("The event is cancelled, so no bookings are being accepted.");
+      return SegueErrorResponse.getBadRequestResponse(EXCEPTION_MESSAGE_CANNOT_BOOK_CANCELLED_EVENT);
     }
   }
 
@@ -1027,15 +1037,15 @@ public class EventsFacade extends AbstractIsaacFacade {
     } catch (NoUserLoggedInException e) {
       return SegueErrorResponse.getNotLoggedInResponse();
     } catch (ContentManagerException e) {
-      log.error("Error during event request", e);
-      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, "Error locating the content you requested.")
+      log.error(EXCEPTION_MESSAGE_EVENT_REQUEST_ERROR, e);
+      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, EXCEPTION_MESSAGE_ERROR_LOCATING_CONTENT)
           .toResponse();
     } catch (SegueDatabaseException e) {
-      String errorMsg = "Database error occurred while trying to delete an event booking.";
+      String errorMsg = EXCEPTION_MESSAGE_DATABASE_ERROR_DELETING_BOOKING;
       log.error(errorMsg, e);
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, errorMsg).toResponse();
     } catch (NoUserException e) {
-      return SegueErrorResponse.getResourceNotFoundResponse("Unable to locate user specified.");
+      return SegueErrorResponse.getResourceNotFoundResponse(EXCEPTION_MESSAGE_CANNOT_LOCATE_USER);
     }
   }
 
@@ -1091,12 +1101,12 @@ public class EventsFacade extends AbstractIsaacFacade {
     } catch (NoUserLoggedInException e) {
       return SegueErrorResponse.getNotLoggedInResponse();
     } catch (SegueDatabaseException e) {
-      String errorMsg = "Database error occurred while trying to book a user onto an event.";
+      String errorMsg = EXCEPTION_MESSAGE_DATABASE_ERROR_CREATING_BOOKING;
       log.error(errorMsg, e);
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, errorMsg).toResponse();
     } catch (ContentManagerException e) {
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR,
-          "Content Database error occurred while trying to retrieve all event booking information.")
+          EXCEPTION_MESSAGE_CONTENT_ERROR_RETRIEVING_BOOKING)
           .toResponse();
     } catch (EmailMustBeVerifiedException e) {
       return new SegueErrorResponse(Status.BAD_REQUEST,
@@ -1116,7 +1126,7 @@ public class EventsFacade extends AbstractIsaacFacade {
           "The booking deadline for this event has passed. No more bookings are being accepted.")
           .toResponse();
     } catch (EventIsCancelledException e) {
-      return SegueErrorResponse.getBadRequestResponse("The event is cancelled, so no bookings are being accepted.");
+      return SegueErrorResponse.getBadRequestResponse(EXCEPTION_MESSAGE_CANNOT_BOOK_CANCELLED_EVENT);
     }
   }
 
@@ -1149,12 +1159,12 @@ public class EventsFacade extends AbstractIsaacFacade {
     } catch (NoUserLoggedInException e) {
       return SegueErrorResponse.getNotLoggedInResponse();
     } catch (SegueDatabaseException e) {
-      String errorMsg = "Database error occurred while trying to book a user onto an event.";
+      String errorMsg = EXCEPTION_MESSAGE_DATABASE_ERROR_CREATING_BOOKING;
       log.error(errorMsg, e);
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, errorMsg).toResponse();
     } catch (ContentManagerException e) {
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR,
-          "Content Database error occurred while trying to retrieve all event booking information.")
+          EXCEPTION_MESSAGE_CONTENT_ERROR_RETRIEVING_BOOKING)
           .toResponse();
     } catch (EmailMustBeVerifiedException e) {
       return new SegueErrorResponse(Status.BAD_REQUEST,
@@ -1175,7 +1185,7 @@ public class EventsFacade extends AbstractIsaacFacade {
               + " Please use the request booking endpoint to book you on to it.")
           .toResponse();
     } catch (EventIsCancelledException e) {
-      return SegueErrorResponse.getBadRequestResponse("The event is cancelled, so no bookings are being accepted.");
+      return SegueErrorResponse.getBadRequestResponse(EXCEPTION_MESSAGE_CANNOT_BOOK_CANCELLED_EVENT);
     }
   }
 
@@ -1231,11 +1241,9 @@ public class EventsFacade extends AbstractIsaacFacade {
       }
 
       // if the user id is null then it means they are changing their own booking.
-      if (userId != null) {
-        if (!(bookingManager.isUserAbleToManageEvent(userLoggedIn, event)
-            || bookingManager.isReservationMadeByRequestingUser(userLoggedIn, userOwningBooking, event))) {
-          return SegueErrorResponse.getIncorrectRoleResponse();
-        }
+      if (userId != null && (!(bookingManager.isUserAbleToManageEvent(userLoggedIn, event)
+          || bookingManager.isReservationMadeByRequestingUser(userLoggedIn, userOwningBooking, event)))) {
+        return SegueErrorResponse.getIncorrectRoleResponse();
       }
 
       Set<BookingStatus> cancelableStatuses =
@@ -1259,15 +1267,15 @@ public class EventsFacade extends AbstractIsaacFacade {
     } catch (NoUserLoggedInException e) {
       return SegueErrorResponse.getNotLoggedInResponse();
     } catch (SegueDatabaseException e) {
-      String errorMsg = "Database error occurred while trying to delete an event booking.";
+      String errorMsg = EXCEPTION_MESSAGE_DATABASE_ERROR_DELETING_BOOKING;
       log.error(errorMsg, e);
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, errorMsg).toResponse();
     } catch (ContentManagerException e) {
-      log.error("Error during event request", e);
-      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, "Error locating the content you requested.")
+      log.error(EXCEPTION_MESSAGE_EVENT_REQUEST_ERROR, e);
+      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, EXCEPTION_MESSAGE_ERROR_LOCATING_CONTENT)
           .toResponse();
     } catch (NoUserException e) {
-      return SegueErrorResponse.getResourceNotFoundResponse("Unable to locate user specified.");
+      return SegueErrorResponse.getResourceNotFoundResponse(EXCEPTION_MESSAGE_CANNOT_LOCATE_USER);
     }
   }
 
@@ -1298,8 +1306,7 @@ public class EventsFacade extends AbstractIsaacFacade {
 
       this.bookingManager.resendEventEmail(event, bookedUser);
 
-      log.info(String.format("User (%s) has just resent an event email to user id (%s)",
-          currentUser.getEmail(), bookedUser.getId()));
+      log.info("User ({}) has just resent an event email to user id ({})", currentUser.getEmail(), bookedUser.getId());
 
       return Response.noContent().build();
     } catch (NoUserLoggedInException e) {
@@ -1309,11 +1316,11 @@ public class EventsFacade extends AbstractIsaacFacade {
       log.error(errorMsg, e);
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, errorMsg).toResponse();
     } catch (ContentManagerException e) {
-      log.error("Error during event request", e);
-      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, "Error locating the content you requested.")
+      log.error(EXCEPTION_MESSAGE_EVENT_REQUEST_ERROR, e);
+      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, EXCEPTION_MESSAGE_ERROR_LOCATING_CONTENT)
           .toResponse();
     } catch (NoUserException e) {
-      return SegueErrorResponse.getResourceNotFoundResponse("Unable to locate user specified.");
+      return SegueErrorResponse.getResourceNotFoundResponse(EXCEPTION_MESSAGE_CANNOT_LOCATE_USER);
     } catch (EventIsCancelledException e) {
       return SegueErrorResponse.getBadRequestResponse("Event is cancelled, cannot resent event emails.");
     }
@@ -1362,14 +1369,14 @@ public class EventsFacade extends AbstractIsaacFacade {
     } catch (NoUserLoggedInException e) {
       return SegueErrorResponse.getNotLoggedInResponse();
     } catch (SegueDatabaseException e) {
-      String errorMsg = "Database error occurred while trying to delete an event booking.";
+      String errorMsg = EXCEPTION_MESSAGE_DATABASE_ERROR_DELETING_BOOKING;
       log.error(errorMsg, e);
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, errorMsg).toResponse();
     } catch (NoUserException e) {
-      return SegueErrorResponse.getResourceNotFoundResponse("Unable to locate user specified.");
+      return SegueErrorResponse.getResourceNotFoundResponse(EXCEPTION_MESSAGE_CANNOT_LOCATE_USER);
     } catch (ContentManagerException e) {
-      log.error("Error during event request", e);
-      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, "Error locating the content you requested.")
+      log.error(EXCEPTION_MESSAGE_EVENT_REQUEST_ERROR, e);
+      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, EXCEPTION_MESSAGE_ERROR_LOCATING_CONTENT)
           .toResponse();
     }
   }
@@ -1427,7 +1434,7 @@ public class EventsFacade extends AbstractIsaacFacade {
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, errorMsg).toResponse();
     } catch (ContentManagerException e) {
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR,
-          "Content Database error occurred while trying to retrieve event booking information.")
+          EXCEPTION_MESSAGE_CONTENT_ERROR_RETRIEVING_BOOKING)
           .toResponse();
     } catch (EventBookingUpdateException e) {
       return new SegueErrorResponse(Status.BAD_REQUEST,
@@ -1520,10 +1527,10 @@ public class EventsFacade extends AbstractIsaacFacade {
         }
 
         ImmutableMap.Builder<String, Object> eventOverviewBuilder = new ImmutableMap.Builder<>();
-        eventOverviewBuilder.put("id", event.getId());
-        eventOverviewBuilder.put("title", event.getTitle());
+        eventOverviewBuilder.put(ID_FIELDNAME, event.getId());
+        eventOverviewBuilder.put(TITLE_FIELDNAME, event.getTitle());
         eventOverviewBuilder.put("subtitle", event.getSubtitle());
-        eventOverviewBuilder.put("date", event.getDate());
+        eventOverviewBuilder.put(DATE_FIELDNAME, event.getDate());
         eventOverviewBuilder.put("bookingDeadline",
             event.getBookingDeadline() == null ? event.getDate() : event.getBookingDeadline());
         eventOverviewBuilder.put("eventStatus", event.getEventStatus());
@@ -1558,8 +1565,8 @@ public class EventsFacade extends AbstractIsaacFacade {
 
       return Response.ok(new ResultsWrapper<>(resultList, findByFieldNames.getTotalResults())).build();
     } catch (ContentManagerException e) {
-      log.error("Error during event request", e);
-      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, "Error locating the content you requested.")
+      log.error(EXCEPTION_MESSAGE_EVENT_REQUEST_ERROR, e);
+      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, EXCEPTION_MESSAGE_ERROR_LOCATING_CONTENT)
           .toResponse();
     } catch (NoUserLoggedInException e) {
       return SegueErrorResponse.getNotLoggedInResponse();
@@ -1657,9 +1664,9 @@ public class EventsFacade extends AbstractIsaacFacade {
         }
 
         ImmutableMap.Builder<String, Object> eventOverviewBuilder = new ImmutableMap.Builder<>();
-        eventOverviewBuilder.put("id", e.getId());
-        eventOverviewBuilder.put("title", e.getTitle());
-        eventOverviewBuilder.put("date", e.getDate());
+        eventOverviewBuilder.put(ID_FIELDNAME, e.getId());
+        eventOverviewBuilder.put(TITLE_FIELDNAME, e.getTitle());
+        eventOverviewBuilder.put(DATE_FIELDNAME, e.getDate());
         eventOverviewBuilder.put("subtitle", e.getSubtitle());
         if (e.getEventStatus() != null) {
           eventOverviewBuilder.put("status", e.getEventStatus());
@@ -1678,8 +1685,8 @@ public class EventsFacade extends AbstractIsaacFacade {
 
       return Response.ok(new ResultsWrapper<>(resultList, findByFieldNames.getTotalResults())).build();
     } catch (ContentManagerException e) {
-      log.error("Error during event request", e);
-      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, "Error locating the content you requested.")
+      log.error(EXCEPTION_MESSAGE_EVENT_REQUEST_ERROR, e);
+      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, EXCEPTION_MESSAGE_ERROR_LOCATING_CONTENT)
           .toResponse();
     }
   }
